yaml_dockerfile/k8s-yaml/configmap/svc-dp.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-curl-configmap-service
spec:
  selector:
    app: nginx-curl-configmap
  ports:
  - name: http
    port: 80
    protocol: TCP
